examples/negative/ffi/extern_lowercase_abi.kai
# Negative fixture (#520 / FFI): the ABI literal in `extern`
# is case-sensitive — `"c"` is rejected, only `"C"` is allowed.
# Parser must reject naming the unsupported ABI.

extern "c" fn puts(s: String) : Int / Ffi

fn main() : Int / Ffi = puts("hi")
